fix waybar spacing error

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -27,14 +27,15 @@ button {
 	background-color: transparent;
 	margin-top: 5px;
 	margin-bottom: 0px;
-	margin-right: 2px;
-	margin-left: 5px;
+	margin-right: 0px;
+	margin-left: 2px;
 }
 #workspaces button {
 	/*box-shadow: rgba(0, 0, 0, 0.116) 2 2 5 2px;*/
 	background-color: #222;
 	border-radius: 10px;
-	margin-right: 4px;
+	margin-left: 3px;
+	margin-right: 1px;
 	padding-top: 0px;
 	padding-bottom: 0px;
 	padding-right: 3px;
